# qmat-aim-skqd

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
doc/: convergence-analysis.md  pipeline.md
input/: bath-richness-test.toml  ce-4e-20q.toml  ce-4e-convergence.toml  ce-4f-stretch.toml  ce-4f.toml  ce-4f1-2.toml  ce-4f1-5.toml  ce-6e-24q-bath5.toml  ce-6e-24q.toml  convergence-study.toml  nio-cluster.toml  pr-4f2.toml  siam-chain.toml  siam-kondo.toml  small-sys.toml  smoke-test.toml
src/: ansatz.py  plot_convergence.py  run-skqd.py  run-study-skqd.py  skqd_helpers.py  step1_siam.py  step2_krylov.py  step3_transpile.py  step4_execute.py  step5_postprocess.py
