[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmat-aim-skqd"
version = "0.1.0"
description = "Sample-based Krylov Quantum Diagonalization for Anderson Impurity Models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "qiskit>=2.0,<3.0",
    "qiskit-ibm-runtime",
    "qiskit-serverless",
    "qiskit_qasm3_import",
    "qiskit_addon_opt_mapper",
    "qiskit_ibm_catalog",
    "qiskit_aer",
    "pyscf>=2.10.0",
    "numpy",
    "qiskit_addon_sqd",
    "matplotlib",
    "scipy>=1.15.0,<1.17.0",
    "toml",
    "ffsim",
    "q8020-cfd-metautil",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.uv.sources]
q8020-cfd-metautil = { path = "../q8020/q8020-cfd-metautil", editable = true }


[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "W0212",  # protected-access
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0621",  # redefined-outer-name
    "C0305",  # trailing-newlines
    "C0303",  # trailing-whitespace
]


